--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "node modifyHtml.js && node addPrefix.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,5 +40,6 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://ad.hnhxhd.cn/xinhaoba/",
   "proxy": "https://ext.hnhuaxi.cn"
 }
